Polish public showcase, draft labeling, and integrity CI

--- a/papers/sources/paper_00_main.tex
+++ b/papers/sources/paper_00_main.tex
@@ -41,7 +41,7 @@
   Jack Chaudier Gaffney\\
   \texttt{jackchaudier@gmail.com}
 }
-\date{}
+\date{Working Paper (First Draft) -- February 2026}
 
 \begin{document}
 \maketitle
