--- a/papers/sources/paper_01_main.tex
+++ b/papers/sources/paper_01_main.tex
@@ -19,6 +19,7 @@
 
 \title{Absorbing States in Greedy Search: When Endogenous Constraints Break Sequential Extraction}
 \author{Jack Chaudier Gaffney}
+\date{Working Paper (First Draft) -- February 2026}
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{proposition}{Proposition}
