--- a/papers/sources/paper_02_streaming_draft.tex
+++ b/papers/sources/paper_02_streaming_draft.tex
@@ -20,6 +20,7 @@
 
 \title{Streaming Oscillation Traps in Endogenous-Pivot Sequential Extraction}
 \author{Jack Chaudier Gaffney}
+\date{Working Paper (First Draft) -- February 2026}
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{proposition}{Proposition}
