--- a/papers/sources/paper_03_context_algebra_draft.tex
+++ b/papers/sources/paper_03_context_algebra_draft.tex
@@ -19,6 +19,7 @@
 
 \title{The Validity Mirage: Context Algebra for Endogenous Semantics under Memory Compression}
 \author{Jack Chaudier Gaffney}
+\date{Working Paper (First Draft) -- February 2026}
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{proposition}{Proposition}
