--- a/papers/sources/paper_i_main.tex
+++ b/papers/sources/paper_i_main.tex
@@ -94,7 +94,7 @@
   \large Absorbing States, Necessity, and the Record-Gap Spectrum
 }
 \author{Jack Chaudier Gaffney}
-\date{February 2026}
+\date{Working Paper (First Draft) -- February 2026}
 
 \begin{document}
 \maketitle
