--- a/papers/sources/paper_i_main.tex
+++ b/papers/sources/paper_i_main.tex
@@ -37,6 +37,10 @@
   linkcolor=blue!60!black,
   citecolor=green!40!black,
   urlcolor=blue!60!black,
+  pdftitle={Tropical Algebra of Endogenous-Pivot Semantics: Absorbing States, Necessity, and the Record-Gap Spectrum},
+  pdfauthor={Jack Chaudier Gaffney},
+  pdfsubject={AI Safety, Tropical Algebra, Context Compression},
+  pdfcreator={LaTeX},
 }
 \usepackage[capitalise,noabbrev]{cleveref}
 
@@ -98,6 +102,10 @@
 
 \begin{document}
 \maketitle
+
+\begin{center}
+\small Licensed under \href{https://creativecommons.org/licenses/by/4.0/}{CC-BY 4.0}
+\end{center}
 
 % ══════════════════════════════════════════════════════════════
 %  Abstract
