Fix Zenodo consistency and bring paper 00 to bundle standard

--- a/papers/sources/paper_00_main.tex
+++ b/papers/sources/paper_00_main.tex
@@ -9,6 +9,12 @@
 \usepackage{tikz}
 \usetikzlibrary{arrows.meta,positioning,shapes.geometric,fit,calc,decorations.pathreplacing}
 \usepackage{hyperref}
+\hypersetup{
+  pdftitle={Continuous Control and Structural Regularization in Multi-Agent Narrative Extraction},
+  pdfauthor={Jack Chaudier Gaffney},
+  pdfsubject={AI Safety, Narrative Extraction, Context Compression},
+  pdfcreator={LaTeX},
+}
 \usepackage[numbers]{natbib}
 \usepackage{xcolor}
 \usepackage{enumitem}
@@ -39,12 +45,17 @@
 \title{Continuous Control and Structural Regularization\\in Multi-Agent Narrative Extraction}
 \author{
   Jack Chaudier Gaffney\\
-  \texttt{jackchaudier@gmail.com}
+  University of Michigan\\
+  \texttt{jackgaff@umich.edu}
 }
 \date{Working Paper (First Draft) -- February 2026}
 
 \begin{document}
 \maketitle
+\begin{center}
+\small Working Paper (First Draft) -- February 2026\\
+\small Licensed under \href{https://creativecommons.org/licenses/by/4.0/}{CC-BY 4.0}
+\end{center}
 
 % ============================================================
 % ABSTRACT
@@ -75,7 +86,7 @@ Our contributions are:
 \item A complete mechanistic account of extraction failure: premature turning-point anchoring traced to candidate pool contamination via importance-driven event injection, with base-rate feasibility analysis (96.8\% grammar saturation) and a temporal filtering fix that recovers 7/9 focal seeds.
 \end{enumerate}
 
-All experiments are fully deterministic and reproducible from fixed random seeds at \$0.00 compute cost per condition.\footnote{Seeds 1--50 for population experiments. 20-seed subsets for $\alpha$-sweeps. Scripts and output data available upon request.}
+All experiments are fully deterministic and reproducible from fixed random seeds at \$0.00 compute cost per condition.\footnote{Seeds 1--50 for population experiments. 20-seed subsets for $\alpha$-sweeps. Code and reproducible artifacts: \url{https://github.com/jack-chaudier/dreams}. Live showcase: \url{https://dreams-dun.vercel.app/}.}
 
 
 % ============================================================
